fixed some files
